# SlidingTilesPuzzle

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  solver.cpp  solver2.cpp
benchmark/: CMakeLists.txt  manhattan_distance_heuristic_bench.cpp
dependencies/: CMakeLists.txt
script/: 15puzzle.py  check_single_thread.py  check_timings_astar.py  check_twentyfour_thread.py  single_thread_experiment.py  twentyfour_thread_experiment.py
script/Korf100/: prob000  prob001  prob002  prob003  prob004  prob005  prob006  prob007  prob008  prob009  prob010  prob011  prob012  prob013  prob014  prob015  prob016  prob017  prob018  prob019  prob020  prob021  prob022  prob023  prob024  prob025  prob026  prob027  prob028  prob029  prob030  prob031  prob032  prob033  prob034  prob035  prob036  prob037  prob038  prob039  (+60 more)
search/: CMakeLists.txt  action.cpp  action.hpp  astar.cpp  astar.hpp  astar_pool.hpp  heuristics.hpp  node.hpp  search.hpp  tile_node.cpp  tile_node.hpp
search/closed/: CMakeLists.txt  closed.hpp  closed_open_address.hpp  closed_open_address_ptr.hpp  open_address_closed.hpp
search/open/: CMakeLists.txt  array_open.hpp  open.hpp  open_array_ptr.hpp
search/tiles/: CMakeLists.txt  heuristics.cpp  manhattan_distance.hpp  manhattan_distance_heuristic.cpp  manhattan_distance_heuristic.hpp  manhattan_distance_heuristics.cpp  manhattan_distance_heuristics.hpp  tile_dimensions.hpp  tile_heuristic.cpp  tile_heuristic.hpp  tile_node.hpp  tiles.cpp  tiles.hpp
src/: CMakeLists.txt  concurrent_solver.cpp  experimental_solver.cpp  solver.cpp
src/closed/: CMakeLists.txt  closed.hpp  closed_chaining.hpp  closed_open_address.hpp  closed_open_address_pool.hpp  closed_open_address_ptr.hpp  concurrent_closed_chaining.hpp  concurrent_closed_open_address_pool.hpp
src/hash/: CMakeLists.txt  tabulation.hpp
src/open/: CMakeLists.txt  concurrent_open_array.hpp  concurrent_open_array_fine.hpp  open.hpp  open_array.hpp  open_array_ptr.hpp
src/search/: CMakeLists.txt  astar.hpp  astar2.hpp  astar_chaining.hpp  astar_multicore.hpp  astar_multicore_fine.hpp  astar_pool.hpp  concurrent_astar.hpp  concurrent_search.hpp  double_closed.hpp  idastar.hpp  search.hpp
src/search/memory_pool/: CMakeLists.txt  MemoryPool.h  MemoryPool.tcc
src/tiles/: manhattan_distance_heuristic.hpp  tile_node.hpp
src/utils/: CMakeLists.txt  spinlock.hpp  util.hpp
test/: CMakeLists.txt  CMakeLists.txt.in  tilesUnitTest.cpp
test/closed/: CMakeLists.txt  closed_chaining_test.cpp
test/open/: CMakeLists.txt  open_array_ptr_test.cpp  open_array_test.cpp  open_test.cpp
test/search/: CMakeLists.txt  astar_pool_test.cpp  astar_test.cpp  idastar_test.cpp
test/search/closed/: CMakeLists.txt  closed_open_address_ptr_test.cpp  closed_open_address_test.cpp  closed_test.cpp  open_address_closed_test.cpp
test/search/open/: CMakeLists.txt  array_open_test.cpp  open_array_test.cpp  open_test.cpp
test/search/tiles/: CMakeLists.txt  manhattan_distance_heuristic_test.cpp  tile_node_test.cpp  tiles_test.cpp
test/tiles/: CMakeLists.txt  manhattanDistanceUnitTest.cpp  manhattan_distance_heuristic_test.cpp  manhattan_distance_test.cpp  manhattan_heuristic_test.cpp  tile_node_test.cpp  tiles_test.cpp
tiles/: CMakeLists.txt  heuristics.cpp  heuristics.hpp  manhattan_distance.cpp  manhattan_distance.hpp  tiles.cpp  tiles.hpp
utils/: CMakeLists.txt  MemoryPool.tcc  steady_clock_timer.hpp
